--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/index.css
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/index.css
@@ -134,13 +134,15 @@ p.dua {
 
     /* Navbar */
     .menu {
-        margin-left: -7px;
-        display: inline-block;
+        margin-left: 0px;
+        width: 10px;
+
     }
 
     .tablet {
-        display: inline-block;
-        margin-left: -50px;
+        display: flex;
+        justify-content: flex-start;
+        margin-left: -120px;
     }
 
 
