--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/index3.css
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/index3.css
@@ -297,13 +297,12 @@ p:nth-child(2) {
 
   /* Navbar */
   .menu {
-    margin-left: -7px;
-    display: inline-block;
+    margin-left: 0px;
   }
 
   .tablet {
-    display: inline-block;
-    margin-left: -50px;
+    display: flex;
+    margin-left: -130px;
   }
 
   .food {
