--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/index4.css
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/index4.css
@@ -168,13 +168,13 @@ p.dua {
 
     /* Navbar */
     .menu {
-        margin-left: -7px;
-        display: inline-block;
+        margin-left: 0px;
     }
 
     .tablet {
-        display: inline-block;
-        margin-left: -50px;
+        display: flex;
+        justify-content: flex-start;
+        margin-left: 20px;
     }
 
 
